static/css/components/button.css
a.button-wrapper {
    cursor: pointer;
    color: white;
    
    height: fit-content
}

a.button-wrapper div.button {
    padding: 10px;

    background-color: black;

    font-weight: 600;
    border-radius: 5px;

    width: fit-content;
    display: flex;

    transition: all 0.2s ease-in-out
}

a.button-wrapper div.button.disabled {
    opacity: 0.35;
    color: black;
    
    background-color: white;
    box-shadow: 0 0 0 1px black;

    cursor: not-allowed
}

/* a.button-wrapper div.button:not(.disabled) {
    box-shadow: 0 0 0 1px grey
} */

div.button img.button-icon, div.button img.button-icon-hover {
    height: 25px;
    margin-right: 0.5em
}

div.button img.button-icon-hover {
    display: none
}

div.button:hover img.button-icon {
    display: none
}

div.button:hover img.button-icon-hover {
    display: block
}

div.button p.button-content {
    margin: auto
}

a.button-wrapper div.button:not(.disabled):not(.loading):hover {
    box-shadow: 0 0 0 1px white
    /* background-color: #080808; */
    /* box-shadow: 0px 0px 5px 5px #ffffff75 !important */
}

a.button-wrapper div.button:not(.disabled):not(.loading):active {
    /* background-color: #2c2c2c; */
    /* box-shadow: 0px 6px 15px #00000017 !important */
    box-shadow: 0 0 10px rgba(112, 128, 144, 0.25) !important
}

div.button:not(.discord):not(.disabled):not(.loading):hover p.button-content {
    color: white
}

a.button-wrapper div.button.discord {
    background-color: #7289DA;
    box-shadow: 0 0 0 1px #7289DA
}

a.button-wrapper div.button.discord:not(.disabled):not(.loading):hover {
    color: #7289DA;
    background-color: white
}

a.button-wrapper div.button.loading {
    cursor: default;
    box-shadow: none
}

p.button-content {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none
}

@media screen and (prefers-color-scheme: light) {
    a.button-wrapper div.button {
        /* box-shadow: 0 0 0 1px rgba(112, 128, 144, 0.25) */
    }

    a.button-wrapper div.button:not(.disabled):not(.loading):hover {
        background-color: #f7f7f7;
        box-shadow: 0px 4px 10px #00000017 !important
    }

    div.button:not(.discord):not(.disabled):not(.loading):hover p.button-content {
        color: black
    }

    a.button-wrapper div.button:not(.disabled):not(.loading):active {
        background-color: #ececec;
        box-shadow: 0px 6px 15px #00000017 !important
    }
}

